--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <title>Sinai colina</title>
+    <script src="https://kit.fontawesome.com/219fa174bb.js" crossorigin="anonymous"></script> <!--Fork -->
   </head>
 
   <body>
@@ -41,7 +42,7 @@
             <a href="portafolio.html" target="_blank">
             <button type="button" class="btn mt-5 mr-3">Portafolio</button>
             </a>
-
+            <h3 class="mt-4"> <i class="fa-regular fa-clone ms-4 me-2"></i>Proyecto forkeado =)</h3> <!--Fork -->
               
             </div>
         </div>
